unpackaged/main/default/objects/Stave__c/Stave__c.object-meta.xml
<CustomObject>
    <label>Stave</label>
    <nameField>
        <label>Stave Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>