unpackaged/main/default/objects/Stave__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Number of Staves</description>
    <inlineHelpText>Number of Staves</inlineHelpText>
    <label>Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>