unpackaged/main/default/objects/Stave__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Stave</description>
    <inlineHelpText>Type of Stave</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baked American Pure 2</fullName>
            </value>
            <value>
                <fullName>Seared French Cuvee</fullName>
            </value>
            <value>
                <fullName>Maker's 46</fullName>
            </value>
            <value>
                <fullName>Roasted French Mocha</fullName>
            </value>
            <value>
                <fullName>Toasted French Spice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>